REGRESSION: Web Inspector hangs for many seconds when trying to reload page https://bugs.webkit.org/show_bug.cgi?id=150065

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-10-14
Reviewed by Mark Lam.

When debugging Web Pages, the same Debugger (PageScriptDebugServer) is
attached to each of the different JSGlobalObjects on the page. This could
mean multiple frames or isolated scripting contexts. Therefore we should
only need to send sourceParsed events to the frontend for scripts within
this new JSGlobalObject, not any JSGlobalObject that has this debugger.

* debugger/Debugger.cpp:
(JSC::Debugger::attach):
Only send sourceParsed events for Scripts in this JSGlobalObject.

Canonical link: https://commits.webkit.org/168286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191081 268f45cc-cd09-0410-ab3c-d52691b4dbfc